// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-panel-dialog Always Opened 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <p
      aria-hidden="true"
    >
      Some outside content...
    </p>
    <div
      aria-hidden="false"
    >
      <div
        aria-hidden="false"
        aria-label="Infotip"
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="panel-dialog panel-dialog--show-init"
        role="dialog"
      >
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          class="panel-dialog__window panel-dialog__window--slide keyboard-trap--active"
        >
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
          <div
            class="panel-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
            <button
              aria-label="Close panel"
              class="icon-btn panel-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close"
                focusable="false"
                height="24px"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close"
                />
              </svg>
            </button>
          </div>
          <div
            class="panel-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-panel-dialog Custom Close Button 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <p
      aria-hidden="true"
    >
      Some outside content...
    </p>
    <div
      aria-hidden="false"
    >
      <div
        aria-hidden="false"
        aria-label="Infotip"
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="panel-dialog panel-dialog--show-init"
        role="dialog"
      >
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          class="panel-dialog__window panel-dialog__window--slide keyboard-trap--active"
        >
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
          <div
            class="panel-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
            <button
              class="icon-btn panel-dialog__close"
              type="button"
            >
              X
            </button>
          </div>
          <div
            class="panel-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-panel-dialog Default 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn--secondary"
    >
      Open Dialog
    </button>
    <p>
      Some outside content...
    </p>
    <div>
      <div
        aria-label="Infotip"
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="panel-dialog"
        hidden=""
        role="dialog"
      >
        <div
          class="panel-dialog__window panel-dialog__window--slide"
        >
          <div
            class="panel-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
            <button
              class="icon-btn panel-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close"
                focusable="false"
                height="24px"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close"
                />
              </svg>
            </button>
          </div>
          <div
            class="panel-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-panel-dialog From Right 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <p
      aria-hidden="true"
    >
      Some outside content...
    </p>
    <div
      aria-hidden="false"
    >
      <div
        aria-hidden="false"
        aria-label="Infotip"
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="panel-dialog panel-dialog--show-init"
        role="dialog"
      >
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          class="panel-dialog__window panel-dialog__window--slide panel-dialog__window--end keyboard-trap--active"
        >
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
          <div
            class="panel-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            />
            <button
              class="icon-btn panel-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close"
                focusable="false"
                height="24px"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close"
                />
              </svg>
            </button>
          </div>
          <div
            class="panel-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-panel-dialog With Animation 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Dialog
  </button>
  <p>
    Some outside content...
  </p>
  <div>
    <div
      aria-label="Infotip"
      aria-labelledby="dialog-title-abc123"
      arial-modal="true"
      class="panel-dialog panel-dialog--mask-fade-slow"
      hidden=""
      role="dialog"
    >
      <div
        class="panel-dialog__window panel-dialog__window--slide"
      >
        <div
          class="panel-dialog__header"
        >
          <h2
            id="dialog-title-abc123"
          >
            Heading
          </h2>
          <button
            class="icon-btn panel-dialog__close"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--close"
              focusable="false"
              height="24px"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="#icon-close"
              />
            </svg>
          </button>
        </div>
        <div
          class="panel-dialog__main"
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
          <p>
            <a
              href="http://www.ebay.com"
            >
              www.ebay.com
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-panel-dialog With Animation From Right 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Open Dialog
  </button>
  <p>
    Some outside content...
  </p>
  <div>
    <div
      aria-label="Infotip"
      aria-labelledby="dialog-title-abc123"
      arial-modal="true"
      class="panel-dialog panel-dialog--mask-fade-slow"
      hidden=""
      role="dialog"
    >
      <div
        class="panel-dialog__window panel-dialog__window--slide panel-dialog__window--end"
      >
        <div
          class="panel-dialog__header"
        >
          <h2
            id="dialog-title-abc123"
          >
            Heading
          </h2>
          <button
            class="icon-btn panel-dialog__close"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--close"
              focusable="false"
              height="24px"
              width="24px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="#icon-close"
              />
            </svg>
          </button>
        </div>
        <div
          class="panel-dialog__main"
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
          <p>
            <a
              href="http://www.ebay.com"
            >
              www.ebay.com
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
